# nonogram-editor

./: CMakeLists.txt  README.md
.github/workflows/: cmake-multi-platform.yml
src/: main.cpp
src/core/: nonogram.cpp  nonogram.h
src/io/: io_manager.cpp  io_manager.h
src/ui/: choose_mode_dialog.cpp  choose_mode_dialog.h  choose_size_dialog.cpp  choose_size_dialog.h  editor_mode.h  main_window.cpp  main_window.h  nonogram_scene.cpp  nonogram_scene.h  nonogram_view.cpp  nonogram_view.h
src/ui/dialogs/: choose_mode_dialog.h  nonogram_solved_dialog.cpp  nonogram_solved_dialog.h
src/ui/nonogram/: nonogram_cell.h  nonogram_scene.cpp  nonogram_scene.h  nonogram_view.cpp
